fixed bug where switching from graph to question view and back would break the display

--- a/app/app_server/static/css/quiz.css
+++ b/app/app_server/static/css/quiz.css
@@ -38,7 +38,7 @@
 }
 
 #graph-wrapper {
-		width:40%;
+		width:50%;
 		height:100%;
 		float:left;
 }
